; ModuleID = '/home/carl/AnghaBench/nginx/src/http/extr_ngx_http_core_module.c_ngx_http_get_forwarded_addr.c'
source_filename = "/home/carl/AnghaBench/nginx/src/http/extr_ngx_http_core_module.c_ngx_http_get_forwarded_addr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_11__ = type { i32, i32 }
%struct.TYPE_12__ = type { i64, %struct.TYPE_10__** }
%struct.TYPE_10__ = type { %struct.TYPE_9__ }
%struct.TYPE_9__ = type { i32, i32 }

@NGX_DECLINED = common dso_local global i64 0, align 8
@NGX_DONE = common dso_local global i64 0, align 8
@NGX_OK = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ngx_http_get_forwarded_addr(i32* %0, i32* %1, %struct.TYPE_12__* %2, %struct.TYPE_11__* %3, %struct.TYPE_12__* %4, i32 %5) #0 {
  %7 = alloca i64, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca %struct.TYPE_12__*, align 8
  %11 = alloca %struct.TYPE_11__*, align 8
  %12 = alloca %struct.TYPE_12__*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i64, align 8
  %15 = alloca i64, align 8
  %16 = alloca i64, align 8
  %17 = alloca %struct.TYPE_10__**, align 8
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store %struct.TYPE_12__* %2, %struct.TYPE_12__** %10, align 8
  store %struct.TYPE_11__* %3, %struct.TYPE_11__** %11, align 8
  store %struct.TYPE_12__* %4, %struct.TYPE_12__** %12, align 8
  store i32 %5, i32* %13, align 4
  %18 = load %struct.TYPE_12__*, %struct.TYPE_12__** %10, align 8
  %19 = icmp eq %struct.TYPE_12__* %18, null
  br i1 %19, label %20, label %32

20:                                               ; preds = %6
  %21 = load i32*, i32** %8, align 8
  %22 = load i32*, i32** %9, align 8
  %23 = load %struct.TYPE_11__*, %struct.TYPE_11__** %11, align 8
  %24 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.TYPE_11__*, %struct.TYPE_11__** %11, align 8
  %27 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.TYPE_12__*, %struct.TYPE_12__** %12, align 8
  %30 = load i32, i32* %13, align 4
  %31 = call i64 @ngx_http_get_forwarded_addr_internal(i32* %21, i32* %22, i32 %25, i32 %28, %struct.TYPE_12__* %29, i32 %30)
  store i64 %31, i64* %7, align 8
  br label %84

32:                                               ; preds = %6
  %33 = load %struct.TYPE_12__*, %struct.TYPE_12__** %10, align 8
  %34 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %33, i32 0, i32 0
  %35 = load i64, i64* %34, align 8
  store i64 %35, i64* %15, align 8
  %36 = load %struct.TYPE_12__*, %struct.TYPE_12__** %10, align 8
  %37 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %36, i32 0, i32 1
  %38 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %37, align 8
  store %struct.TYPE_10__** %38, %struct.TYPE_10__*** %17, align 8
  %39 = load i64, i64* @NGX_DECLINED, align 8
  store i64 %39, i64* %14, align 8
  store i64 0, i64* %16, align 8
  br label %40

40:                                               ; preds = %81, %32
  %41 = load i64, i64* %15, align 8
  %42 = add i64 %41, -1
  store i64 %42, i64* %15, align 8
  %43 = icmp ugt i64 %41, 0
  br i1 %43, label %44, label %82

44:                                               ; preds = %40
  %45 = load i32*, i32** %8, align 8
  %46 = load i32*, i32** %9, align 8
  %47 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %17, align 8
  %48 = load i64, i64* %15, align 8
  %49 = getelementptr inbounds %struct.TYPE_10__*, %struct.TYPE_10__** %47, i64 %48
  %50 = load %struct.TYPE_10__*, %struct.TYPE_10__** %49, align 8
  %51 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %50, i32 0, i32 0
  %52 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %51, i32 0, i32 1
  %53 = load i32, i32* %52, align 4
  %54 = load %struct.TYPE_10__**, %struct.TYPE_10__*** %17, align 8
  %55 = load i64, i64* %15, align 8
  %56 = getelementptr inbounds %struct.TYPE_10__*, %struct.TYPE_10__** %54, i64 %55
  %57 = load %struct.TYPE_10__*, %struct.TYPE_10__** %56, align 8
  %58 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %57, i32 0, i32 0
  %59 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %58, i32 0, i32 0
  %60 = load i32, i32* %59, align 4
  %61 = load %struct.TYPE_12__*, %struct.TYPE_12__** %12, align 8
  %62 = load i32, i32* %13, align 4
  %63 = call i64 @ngx_http_get_forwarded_addr_internal(i32* %45, i32* %46, i32 %53, i32 %60, %struct.TYPE_12__* %61, i32 %62)
  store i64 %63, i64* %14, align 8
  %64 = load i32, i32* %13, align 4
  %65 = icmp ne i32 %64, 0
  br i1 %65, label %67, label %66

66:                                               ; preds = %44
  br label %82

67:                                               ; preds = %44
  %68 = load i64, i64* %14, align 8
  %69 = load i64, i64* @NGX_DECLINED, align 8
  %70 = icmp eq i64 %68, %69
  br i1 %70, label %71, label %76

71:                                               ; preds = %67
  %72 = load i64, i64* %16, align 8
  %73 = icmp ne i64 %72, 0
  br i1 %73, label %74, label %76

74:                                               ; preds = %71
  %75 = load i64, i64* @NGX_DONE, align 8
  store i64 %75, i64* %14, align 8
  br label %82

76:                                               ; preds = %71, %67
  %77 = load i64, i64* %14, align 8
  %78 = load i64, i64* @NGX_OK, align 8
  %79 = icmp ne i64 %77, %78
  br i1 %79, label %80, label %81

80:                                               ; preds = %76
  br label %82

81:                                               ; preds = %76
  store i64 1, i64* %16, align 8
  br label %40

82:                                               ; preds = %80, %74, %66, %40
  %83 = load i64, i64* %14, align 8
  store i64 %83, i64* %7, align 8
  br label %84

84:                                               ; preds = %82, %20
  %85 = load i64, i64* %7, align 8
  ret i64 %85
}

declare dso_local i64 @ngx_http_get_forwarded_addr_internal(i32*, i32*, i32, i32, %struct.TYPE_12__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
